application properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=content-calender
+# Use H2 in-memory for dev
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Always run SQL schema on startup
+spring.sql.init.mode=always
+
+# Hibernate or JDBC schema creation
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# (Optional) expose H2 console
+spring.h2.console.enabled=true
+
+spring.sql.init.schema-locations=classpath:schema-h2.sql
+
+
+# Custom props for testing
+cc.welcomeMessage=you are in dev MODE
+cc.about=dev dev dev
